[Dark Theme]: fix several issues in the dark mode.

--- a/frontend/packages/pipelines-plugin/src/components/pipelines/pipeline-topology/InstallingNodeDecorator.scss
+++ b/frontend/packages/pipelines-plugin/src/components/pipelines/pipeline-topology/InstallingNodeDecorator.scss
@@ -1,4 +1,7 @@
 .opp-installing-node-decorator {
   font-size: var(--pf-global--icon--FontSize--sm);
   cursor: pointer;
+  &__circle {
+    fill: var(--pf-global--BackgroundColor--light-100);
+  }
 }
