--- a/frontend/packages/topology/src/components/list-view/TopologyListView.scss
+++ b/frontend/packages/topology/src/components/list-view/TopologyListView.scss
@@ -26,7 +26,9 @@
   }
 
   .pf-c-data-list {
-    --pf-c-data-list__item-row--PaddingLeft: calc(var(--pf-c-data-list__item-row--xl--PaddingLeft) - var(--pf-global--spacer--sm));
+    --pf-c-data-list__item-row--PaddingLeft: calc(
+      var(--pf-c-data-list__item-row--xl--PaddingLeft) - var(--pf-global--spacer--sm)
+    );
   }
 
   &__sidebar {
@@ -39,7 +41,7 @@
     top: 0;
     width: calc(100% - 15px);
     z-index: 5;
-    @media(min-width: $screen-sm-min) {
+    @media (min-width: $screen-sm-min) {
       max-width: var(--odc-topology-list-view-sidebar-width);
     }
   }
@@ -52,9 +54,7 @@
   &__sidebar-appear-active {
     opacity: 1;
     transform: translateX(0);
-    transition:
-      opacity 175ms ease-out,
-      transform 225ms ease-out;
+    transition: opacity 175ms ease-out, transform 225ms ease-out;
   }
 
   &__group-resource-count {
@@ -90,7 +90,7 @@
     margin: 2px 0;
   }
   &__type-icon-bg {
-    background-color: var(--pf-global--BackgroundColor--100);
+    background-color: var(--pf-global--palette--white);
     border: solid 1px var(--pf-global--BorderColor--300);
     border-radius: 12px;
     box-shadow: 2px 2px 3px var(--pf-global--BorderColor--100);
@@ -124,8 +124,10 @@
   &__unassigned-label {
     font-size: var(--pf-global--FontSize--2xl);
   }
-  &__kind-row, &__item-row {
-    border-bottom: var(--pf-c-data-list__item--BorderBottomWidth) solid var(--pf-c-data-list__item--BorderBottomColor);
+  &__kind-row,
+  &__item-row {
+    border-bottom: var(--pf-c-data-list__item--BorderBottomWidth) solid
+      var(--pf-c-data-list__item--BorderBottomColor);
     min-height: 58px;
     &.is-filtered {
       outline-offset: -5px;
@@ -136,7 +138,8 @@
     font-size: var(--pf-global--FontSize--lg);
   }
   .pf-c-data-list__item.pf-m-selectable {
-    .odc-topology-list-view__kind-row, .odc-topology-list-view__unassigned-group{
+    .odc-topology-list-view__kind-row,
+    .odc-topology-list-view__unassigned-group {
       &.pf-c-data-list__item-row:hover {
         background-color: var(--pf-global--BackgroundColor--100);
         cursor: default;
@@ -184,7 +187,9 @@
         --pf-c-data-list__item--before--BackgroundColor: transparent;
       }
       &.pf-m-selectable.pf-m-selected {
-        --pf-c-data-list__item--before--BackgroundColor: var(--pf-c-data-list__item--m-expanded--before--BackgroundColor);
+        --pf-c-data-list__item--before--BackgroundColor: var(
+          --pf-c-data-list__item--m-expanded--before--BackgroundColor
+        );
       }
       &:focus {
         outline-color: transparent;
@@ -195,17 +200,20 @@
         }
       }
     }
-    &.pf-m-selected, &.pf-m-selectable:hover, &.pf-m-selectable:focus {
+    &.pf-m-selected,
+    &.pf-m-selectable:hover,
+    &.pf-m-selectable:focus {
       z-index: initial;
     }
 
-    &.pf-m-selectable:hover, &.pf-m-selectable:focus {
+    &.pf-m-selectable:hover,
+    &.pf-m-selectable:focus {
       &:not(.pf-m-selected):not(:last-child) {
         --pf-c-data-list__item--BorderBottomWidth: 1px;
-        +.pf-c-data-list__item {
+        + .pf-c-data-list__item {
           border-top: 0;
         }
-     }
+      }
     }
     &.pf-m-selectable .pf-c-data-list__item-row:hover {
       background-color: var(--pf-global--BackgroundColor--200);
@@ -214,7 +222,8 @@
   .pf-c-data-list__item-content {
     --pf-c-data-list__item-content--md--PaddingBottom: var(--pf-global--spacer--md);
   }
-  .pf-c-data-list__cell, .pf-c-data-list__cell.pf-m-icon+.pf-c-data-list__cell {
+  .pf-c-data-list__cell,
+  .pf-c-data-list__cell.pf-m-icon + .pf-c-data-list__cell {
     padding-top: var(--pf-global--spacer--md);
   }
 }
